--- a/src/index.html
+++ b/src/index.html
@@ -2,51 +2,59 @@
 <html class="no-js" lang="pt-br">
 
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>Encontra sua localização</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-  <meta name="theme-color" content="#fafafa">
+    <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
-  <!--[if IE]>
+    <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <!-- Add your site or application content here -->
-  <div class="localizador">
-    <h1 class="localizador__title">Localizador</h1>  
-    <button class="localizador__button" id="btn-localizacao" alt="botão que ativa busca de sua localização">Localizar</button>
-    <hr>
-    <div role="alert" arie-live="polite">
-      <span id="error" class="localizador__mensagem localizador__mensagem--erro"></span>
-      <span id="sucesso" class="localizador__mensagem localizador__mensagem--sucesso"></span>
-      <p id="titulo"></p>
-      <p id="latitude"></p>
-      <p id="longitude"></p>
-      <p id="endereco"></p>
+    <!-- Add your site or application content here -->
+    <div class="localizador">
+        <h1 class="localizador__title">Localizador</h1>
+        <button class="localizador__button" id="btn-localizacao" alt="botão que ativa busca de sua localização" aria-label="Encontrar sua localização">Localizar</button>
+        <hr>
+        <div role="alert" arie-live="polite">
+            <span id="error" class="localizador__mensagem localizador__mensagem--erro"></span>
+            <span id="sucesso" class="localizador__mensagem localizador__mensagem--sucesso"></span>
+            <p id="titulo"></p>
+            <p id="latitude"></p>
+            <p id="longitude"></p>
+            <p id="endereco"></p>
+        </div>
+
     </div>
-    
-  </div>
 
 
 
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script>
+        window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')
+    </script>
 
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+        window.ga = function() {
+            ga.q.push(arguments)
+        };
+        ga.q = [];
+        ga.l = +new Date;
+        ga('create', 'UA-XXXXX-Y', 'auto');
+        ga('set', 'transport', 'beacon');
+        ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
-</html>
+</html>''
